--- a/src/js/_athletebox.html
+++ b/src/js/_athletebox.html
@@ -1,6 +1,6 @@
 <% var athlete = data.athletes[data.id - 1]; %>
 
-<img src="./assets/athlete.png"> 
+<img src="./assets/suebird.jpg"> 
 
 <div><%=athlete.firstname%>  <%=athlete.lastname%></div>
 
