--- a/src/index.html
+++ b/src/index.html
@@ -77,26 +77,31 @@
           <div class="athlete-name row-item" data-id="<%= person.athleteid%>">
             <%=person.firstname%> <%=person.lastname%>
           </div>
-
-          <% for (var i = 3; i < 25; i++) {
+          <% for (var i = 3; i < 28; i++) {
             var dateString = "8/" + i + "/16"; 
             var hasEvent = !!person.days[dateString]; 
             var eventDay = "event " + dateString;
             %>
           <div class="row-item <%= hasEvent ? eventDay : "noevent" %>">
-
+            
             <% if (hasEvent) {  
-
               person.days[dateString].forEach( function(day) { %>
-            <i class="icon">x</i>                                  
+            
+<div class="tooltip"><i class="icon">x</i>
+  <span class="tooltiptext">    <%=day.event.category%><br>
+    <%=day.event.title%><br>
+    Local Time: <%=day.event.localtime%><br> 
+    Rio Time: <%=day.event.riotime%><br>
+</span>
+</div>
             <% });
 
             } else { } %>
 
-          </div> <!--div (per athlete): event/no-event-->
-
+          </div>
           <% }; %> 
-        </div> <!--div: athlete row-->
+        </div> 
+        <div class="athlete-box" data-id="<%= person.athleteid%>"></div>
 
         <% }); %>
 
