--- a/src/js/_athletebox.html
+++ b/src/js/_athletebox.html
@@ -1,9 +1,10 @@
 <% var athlete = data.athletes[data.id - 1]; %>
 
+<div class="box">
+  <div class="name"><%=athlete.firstname%>  <%=athlete.lastname%></div>
 
-<div><%=athlete.firstname%>  <%=athlete.lastname%></div>
+  <div>Hometown:  <%=athlete.hometown%></div>
 
-<div>Hometown:  <%=athlete.hometown%></div>
-
-<div>Team:  <%=athlete.team%></div>
-<div>Sport:  <%=athlete.sport%></div>
+  <div>Team:  <%=athlete.team%></div>
+  <div>Sport:  <%=athlete.sport%></div>
+</div>
