--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
 
               person.days[dateString].forEach( function(day) { %>
 
-            <div class="tooltip"><i class="icon">x</i>
+            <div class="tooltip"><i class="icon"><img src="assets/Soccer.png"></i>
         
               
               <span class="tooltiptext">    <%=day.event.category%><br>
