--- a/src/js/_athletebox.html
+++ b/src/js/_athletebox.html
@@ -1,31 +1,39 @@
-<% var athlete = data.athletes[data.id - 1]; %>
+<% var athletes = data.athletes; 
 
-<div class="box">
+athletes.forEach(function(athlete) { 
 
-  <div class="intro">
+  if (athlete.athleteid == data.id) { %>
 
-    <div class="name">
-      <%=athlete.firstname%>  <%=athlete.lastname%>
+    <div class="box">
+
+      <div class="intro">
+
+        <div class="name">
+          <%=athlete.firstname%>  <%=athlete.lastname%>
+        </div>
+
+        <div class="photo">
+          <image src="<%=athlete.Photo%>"/>
+        </div>
+
+      </div>
+
+
+      <div class="stats">
+        <div>Hometown:  <%=athlete.hometown%></div>
+
+        <div>Team:  <%=athlete.team%></div>
+
+        <div>Sport:  <%=athlete.sport%></div>
+      </div>
+
+
+      <div class="connection">
+        Washington Connection: <%=athlete.connection%>
+      </div>
+
     </div>
 
-    <div class="photo">
-      <image src="<%=athlete.Photo%>"/>
-    </div>
+  <% } 
 
-  </div>
-
-
-  <div class="stats">
-    <div>Hometown:  <%=athlete.hometown%></div>
-
-    <div>Team:  <%=athlete.team%></div>
-
-    <div>Sport:  <%=athlete.sport%></div>
-  </div>
-
-
-  <div class="connection">
-    Washington Connection: <%=athlete.connection%>
-  </div>
-
-</div>
+}); %>
