--- a/src/js/_athletebox.html
+++ b/src/js/_athletebox.html
@@ -12,7 +12,7 @@ athletes.forEach(function(athlete) {
         </div>
 
         <div class="photo">
-          <image src="<%=athlete.Photo%>"/>
+          <image src="assets/faces/<%=athlete.athleteid%>_athleteid_resized.jpg"/>
         </div>
 
       </div>
