--- a/src/index.html
+++ b/src/index.html
@@ -10,205 +10,204 @@
     <%= t.include("partials/_head.html") %>
   </head>
   <body>
-<responsive-child>
-    <% 
-    var people = json.OlympiansTracker_people;
-    var events = {};  
+    <responsive-child>
+      <% 
+      var people = json.OlympiansTracker_people;
+      var events = {};  
 
-    var participation = json.OlympiansTracker_participation;
-    json.OlympiansTracker_events.forEach(function(item) {
-      events[item.eventid] = item;
-    });      
+      var participation = json.OlympiansTracker_participation;
+      json.OlympiansTracker_events.forEach(function(item) {
+        events[item.eventid] = item;
+      });      
 
-    people.forEach(function(person) {
+      people.forEach(function(person) {
 
-      //This object holds each athlete with all of their events.
-      person.days = {};
+        //This object holds each athlete with all of their events.
+        person.days = {};
 
-      participation.forEach(function(item) {
-        if (item.athleteid == person.athleteid) {
+        participation.forEach(function(item) {
+          if (item.athleteid == person.athleteid) {
 
-          var event = events[item.eventid];
-          if (!person.days[event.date]) {
-            person.days[event.date] = [];
-          }
-
-          person.days[event.date].push({
-            event: event,
-            medal: event.medal,
-            medalType: item.medal,
-            results: item.results,
-            url: item.url,
-            date: event.date,
-            localTime: event.localtime,
-
-
-          });
-        }
-      });
-    }); %>
-
-    <div class="container">
-      <h2>Washington locals in the Rio Olympics</h2>
-      <p class="chatter mobile">
-        Use the table below to explore when these Olympians with Washington ties are competing in Rio and how they are performing. Tap on the boxes below to see each athlete’s bio, event schedule and results.        
-      </p>      
-      <p class="chatter">
-        Use the table below to explore when these Olympians with Washington ties are competing in Rio and how they are performing. Hover over the icons for more information on specific events, timing, results and how to watch.
-      </p>
-      <div class="legend">
-        <h2>Legend</h2>
-        <ul>
-          <li><img class="splotch" src="assets/icons/Athletics.png">Scheduled event</li>
-          <li><div class="splotch medaling"></div> Medaling event</li>
-          <li><img class="splotch" src="assets/medals/gold_medal.png">Medalist</li>
-        </ul>
-
-
-      </div>
-
-      <div class="table">
-
-        <!--Headers-->
-        <div class="table-column headers">
-
-        </div>
-
-        <% for (var j = 0; j < people.length; j++) {
-          var athlete = people[j];
-          var firstTen = !!(j < 10); 
-
-          if (j % 10 == 0) { %>
-        <div class="table-column headers <%= firstTen ? "" : "off" %>">
-          <div class="row-item athlete-name header">Name</div>
-          <div class="row-item" data-id="8/3">8/3</div>
-          <div class="row-item" data-id="8/6">8/6</div>
-          <div class="row-item" data-id="8/7">8/7</div>
-          <div class="row-item" data-id="8/8">8/8</div>
-          <div class="row-item" data-id="8/9">8/9</div>
-          <div class="row-item" data-id="8/10">8/10</div>
-          <div class="row-item" data-id="8/11">8/11</div>
-          <div class="row-item" data-id="8/12">8/12</div>
-          <div class="row-item" data-id="8/13">8/13</div>
-          <div class="row-item" data-id="8/14">8/14</div>
-          <div class="row-item" data-id="8/15">8/15</div>
-          <div class="row-item" data-id="8/16">8/16</div>
-          <div class="row-item" data-id="8/17">8/17</div>    
-          <div class="row-item" data-id="8/18">8/18</div>
-          <div class="row-item" data-id="8/19">8/19</div>
-          <div class="row-item" data-id="8/20">8/20</div>
-          <div class="row-item" data-id="8/21">8/21</div>
-
-        </div>
-        <% } %>
-
-        <div class="table-column  <%= firstTen ? "athleterows" : "athleterows off" %>">
-
-          <div class="athlete-name row-item" data-id="<%= athlete.athleteid%>">
-
-            <img src="assets/faces/<%=athlete.athleteid%>_athleteid_resized.jpg"/>
-
-            <aside class="stats">              
-              <div class="name"><%=athlete.firstname%> <%=athlete.lastname%> <i class="fa fa-plus-circle"></i>
-              </div>
-
-              <i><%=athlete.sport%></i><br>
-              <%=athlete.team%><br>
-
-            </aside>
-
-          </div>
-
-          <div class="athlete-box mobile" data-id="<%= athlete.athleteid%>"></div>
-
-          <!--Event rows-->
-          <% var hasMedal; var hasResult; var wonMedal; 
-          for (var i = 3; i < 22; i++) {
-
-            if ( i == 4 || i == 5) {
-              continue;
+            var event = events[item.eventid];
+            if (!person.days[event.date]) {
+              person.days[event.date] = [];
             }
 
-            var dateString = "8/" + i; 
-            var hasEvent = !!athlete.days[dateString]; 
-            var athletes = athlete.days[dateString]; 
-
-            if (hasEvent) {
-              athletes.forEach(function(t) {
-                hasMedal = !!t.medal;  
-              }); 
-            }%>
-
-          <div class="row-item <%= hasEvent ? "event" : "noevent" %> <%= hasMedal ? "medal" : "" %>">
-
-            <%  if (hasEvent) { %>
-
-            <% athletes.forEach( function(day) { 
-
-              wonMedal = !!day.medalType;
-              hasResult = !!day.results;%>
-
-            <div class="tooltip">
-
-              <img src="assets/<%= wonMedal ? "medals/" + day.medalType + "_medal.png": "icons/" + athlete.icon_name + ".png" %>" class="icon grow">
+            person.days[event.date].push({
+              event: event,
+              medal: event.medal,
+              medalType: item.medal,
+              results: item.results,
+              url: item.url,
+              date: event.date,
+              localTime: event.localtime,
 
 
-              <aside class="tooltiptext">    
+            });
+          }
+        });
+      }); %>
 
-                <div class="date"><%=day.event.date%></div>
-                <div class="title"><%=day.event.title%></div>
-                <% if (hasResult) { %>
-
-                Results: <%=day.results%>
-
-                <% if (!!day.url) { %>
-                <a href="<%=day.url%>">Read more</a>
-                <% } } else { %>
-
-                <% if (!!day.localTime) { %>
-                <i class="fa fa-clock-o" aria-hidden="true"></i> <b><%=day.event.localtime%> PDT </b>, <%=day.event.riotime%> BRT<br>
-                <% if (!!day.event.watch) { %>
-                <i class="fa fa-desktop" aria-hidden="true"></i><%=day.event.watch%><br>
-                <% } %>
-                <% } else { %>
-                Schedule TBD <br>
-                <% } %>
-                <a class="nbc" href="http://www.nbcolympics.com/live-stream-schedule">NBC broadcast schedule </a>
-                <% } %>
-
-              </aside>
-            </div>
-            <%});%>
+      <div class="container">
+        <h2>Washington locals in the Rio Olympics</h2>
+        <p class="chatter mobile">
+          Use the table below to explore when these Olympians with Washington ties are competing in Rio and how they are performing. Tap on the boxes below to see each athlete’s bio, event schedule and results.        
+        </p>      
+        <p class="chatter">
+          Use the table below to explore when these Olympians with Washington ties are competing in Rio and how they are performing. Hover over the icons for more information on specific events, timing, results and how to watch.
+        </p>
+        <div class="legend">
+          <h2>Legend</h2>
+          <ul>
+            <li><img class="splotch" src="assets/icons/Athletics.png">Scheduled event</li>
+            <li><div class="splotch medaling"></div> Medaling event</li>
+            <li><img class="splotch" src="assets/medals/gold_medal.png">Medalist</li>
+          </ul>
 
 
+        </div>
 
-            <% } %>
+        <div class="table">
+
+          <!--Headers-->
+
+          <% for (var j = 0; j < people.length; j++) {
+            var athlete = people[j];
+            var firstTen = !!(j < 10); 
+
+            if (j % 10 == 0) { %>
+          <div class="table-row headers <%= firstTen ? "" : "off" %>">
+            <div class="row-item athlete-name header">Name</div>
+            <div class="row-item" data-id="8/3">8/3</div>
+            <div class="row-item" data-id="8/6">8/6</div>
+            <div class="row-item" data-id="8/7">8/7</div>
+            <div class="row-item" data-id="8/8">8/8</div>
+            <div class="row-item" data-id="8/9">8/9</div>
+            <div class="row-item" data-id="8/10">8/10</div>
+            <div class="row-item" data-id="8/11">8/11</div>
+            <div class="row-item" data-id="8/12">8/12</div>
+            <div class="row-item" data-id="8/13">8/13</div>
+            <div class="row-item" data-id="8/14">8/14</div>
+            <div class="row-item" data-id="8/15">8/15</div>
+            <div class="row-item" data-id="8/16">8/16</div>
+            <div class="row-item" data-id="8/17">8/17</div>    
+            <div class="row-item" data-id="8/18">8/18</div>
+            <div class="row-item" data-id="8/19">8/19</div>
+            <div class="row-item" data-id="8/20">8/20</div>
+            <div class="row-item" data-id="8/21">8/21</div>
 
           </div>
-          <% }; %> 
-        </div> 
-        <div class="athlete-box" data-id="<%= athlete.athleteid%>"></div>
-        <% } %>
+          <% } %>
+
+          <div class="table-row  <%= firstTen ? "athleterows" : "athleterows off" %>">
+
+            <div class="athlete-name row-item" data-id="<%= athlete.athleteid%>">
+
+              <img src="assets/faces/<%=athlete.athleteid%>_athleteid_resized.jpg"/>
+
+              <aside class="stats">              
+                <div class="name"><%=athlete.firstname%> <%=athlete.lastname%> <i class="fa fa-plus-circle"></i>
+                </div>
+
+                <i><%=athlete.sport%></i><br>
+                <%=athlete.team%><br>
+
+              </aside>
+
+            </div>
+
+            <div class="athlete-box" data-id="<%= athlete.athleteid%>">
+              <%= t.include("js/_athletebox.html", { data: { athletes: people, id: athlete.athleteid }}) %>
+            </div>
+            
+            <div class="schedule">
+
+            <!--Event rows-->
+              <% var hasMedal; var hasResult; var wonMedal; 
+              for (var i = 3; i < 22; i++) {
+
+                if ( i == 4 || i == 5) {
+                  continue;
+                }
+
+                var dateString = "8/" + i; 
+                var hasEvent = !!athlete.days[dateString]; 
+                var athletes = athlete.days[dateString]; 
+
+                if (hasEvent) {
+                  athletes.forEach(function(t) {
+                    hasMedal = !!t.medal;  
+                  }); 
+                }%>
+
+              <div class="row-item <%= hasEvent ? "event" : "noevent" %> <%= hasMedal ? "medal" : "" %>">
+
+                <%  if (hasEvent) { %>
+
+                <% athletes.forEach( function(day) { 
+
+                  wonMedal = !!day.medalType;
+                  hasResult = !!day.results;%>
+
+                <div class="tooltip">
+
+                  <img src="assets/<%= wonMedal ? "medals/" + day.medalType + "_medal.png": "icons/" + athlete.icon_name + ".png" %>" class="icon grow">
+
+
+                  <aside class="tooltiptext">    
+
+                    <div class="date"><%=day.event.date%></div>
+                    <div class="title"><%=day.event.title%></div>
+                    <% if (hasResult) { %>
+
+                    Results: <%=day.results%>
+
+                    <% if (!!day.url) { %>
+                    <a href="<%=day.url%>">Read more</a>
+                    <% } } else { %>
+
+                    <% if (!!day.localTime) { %>
+                    <i class="fa fa-clock-o" aria-hidden="true"></i> <b><%=day.event.localtime%> PDT </b>, <%=day.event.riotime%> Rio<br>
+                    <% if (!!day.event.watch) { %>
+                    <i class="fa fa-desktop" aria-hidden="true"></i><%=day.event.watch%><br>
+                    <% } %>
+                    <% } else { %>
+                    Schedule TBD <br>
+                    <% } %>
+                    <a class="nbc" href="http://www.nbcolympics.com/live-stream-schedule">NBC broadcast schedule </a>
+                    <% } %>
+
+                  </aside>
+                </div>
+                <%});%>
+
+                <% } %>
+
+              </div>
+              <% }; %>
+            </div>
+          </div>
+          <% } %>
 
 
 
+        </div>
+        <p class="expand">More local athletes <i class="fa fa-angle-double-down" aria-hidden="true"></i></p>
+        <div class="credit">
+          Reporting and production: Nick Sullivan <br>
+          Development: Elif Koc
+
+        </div>
       </div>
-      <p class="expand">More local athletes <i class="fa fa-angle-double-down" aria-hidden="true"></i></p>
-      <div class="credit">
-        Reporting and production: Nick Sullivan <br>
-        Development: Elif Koc
 
-      </div>
-    </div>
-
-    <script> 
-      window.olympians = <%= JSON.stringify(people) %>  
-    </script>
-    <script src="app.js" async></script>
-    <% if (json.project.production) { %>
-    <%= !json.project.embedded ? t.include("partials/_foot.html") : "" %>
-    <%= t.include("partials/_workHere.html") %>
-    <% } %>
-      </responsive-child>
+      <script> 
+        window.olympians = <%= JSON.stringify(people) %>  
+      </script>
+      <script src="app.js" async></script>
+      <% if (json.project.production) { %>
+      <%= !json.project.embedded ? t.include("partials/_foot.html") : "" %>
+      <%= t.include("partials/_workHere.html") %>
+      <% } %>
+    </responsive-child>
   </body>
 </html>
