--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,7 @@
               results: item.results,
               url: item.url,
               date: event.date,
-              localTime: event.localtime,
-
-
+              localTime: event.localtime
             });
           }
         });
@@ -134,7 +132,6 @@
                 var hasEvent = !!athlete.days[dateString]; 
                 var athletes = athlete.days[dateString]; 
 
-                if ()
                 if (hasEvent) {
                   athletes.forEach(function(t) {
                     hasMedal = !!t.medal;  
