--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,9 @@
               results: item.results,
               url: item.url,
               date: event.date,
-              localTime: event.localtime
+              localTime: event.localtime,
+
+
             });
           }
         });
@@ -132,6 +134,7 @@
                 var hasEvent = !!athlete.days[dateString]; 
                 var athletes = athlete.days[dateString]; 
 
+                if ()
                 if (hasEvent) {
                   athletes.forEach(function(t) {
                     hasMedal = !!t.medal;  
