Updated for iframe

--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,7 @@
               medalType: item.medal,
               results: item.results,
               url: item.url,
-              date: event.date,
-              localTime: event.localtime,
+              date: event.date
 
 
             });
@@ -134,7 +133,6 @@
                 var hasEvent = !!athlete.days[dateString]; 
                 var athletes = athlete.days[dateString]; 
 
-                if ()
                 if (hasEvent) {
                   athletes.forEach(function(t) {
                     hasMedal = !!t.medal;  
