--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,7 @@
                   <img src="assets/<%= wonMedal ? "medals/" + day.medalType + "_medal.png": "icons/" + athlete.icon_name + ".png" %>" class="icon grow">
 
 
-                  <aside class="tooltiptext">    
+                  <aside class="tooltiptext <%= (i == 20 || i == 21) ? "lefty" : "" %>">    
 
                     <div class="date"><%=day.event.date%></div>
                     <div class="title"><%=day.event.title%></div>
